unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <inlineHelpText>Any descriptive text about the product or service offering that you may wish to include on your invoice such as &#39;Business Analyst T&amp;M Hours, or Product X)</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>