unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Discount_Dollar__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Discount_Dollar__c</fullName>
    <inlineHelpText>Any set discount in currency that you wish to apply at the line item level</inlineHelpText>
    <label>Unit Discount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>