unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Discount_Percent__c</fullName>
    <inlineHelpText>Any percentage discount that you wish to apply at the line item level</inlineHelpText>
    <label>Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>