unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Invoice__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Invoice__c</fullName>
    <inlineHelpText>The Invoice record that this line item is related to</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>project_cloud__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>