unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Quantity__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Quantity__c</fullName>
    <inlineHelpText>The quantity of units to be invoiced</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>