unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subtotal__c</fullName>
    <description>If Discount = Unit Discount then:
Subtotal = QTR * (Rate - Unit Discount) 
Else If Discount = Discount (%) then
Subtotal = QTR * (Rate * (1 - Discount (%))</description>
    <inlineHelpText>The calculated subtotal (minus tax) at the individual line item level</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>