unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Tax__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Tax__c</fullName>
    <description>Subtotal * Tax Rate (%)</description>
    <inlineHelpText>The calculated tax at the individual line item level</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>