unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Tax_Rate__c</fullName>
    <inlineHelpText>The tax rate that should be applied to the line item (Sales Tax, VAT, GST etc)</inlineHelpText>
    <label>Tax rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>