unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Total__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total__c</fullName>
    <description>Subtotal + Tax</description>
    <inlineHelpText>The calculated total at the individual line item level</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>