unpackaged/main/default/objects/project_cloud__Invoice_Line_Item__c/fields/project_cloud__Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Unit_Rate__c</fullName>
    <inlineHelpText>The rate that each unit should be billed at</inlineHelpText>
    <label>Unit Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>